load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    tags = ["manual"],
    workspace = "//:WORKSPACE",
)
