load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@gazelle//:def.bzl", "gazelle")

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    deps = [
        "//html:html_bundle",
        "//html:html_file",
        "//html:provider",
    ],
)

gazelle(name = "gazelle")

buildifier(
    name = "format",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "lint",
    size = "small",
    lint_mode = "warn",
    mode = "check",
    no_sandbox = True,
    tags = ["manual"],
    workspace = "//:WORKSPACE",
)
