module(
    name = "bzlparty_rules_html",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.1.0")
bazel_dep(name = "platforms", version = "0.0.8")
bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "bzlparty_tools", version = "0.2.0")

bundler_extension = use_extension("@bzlparty_rules_html//bundler:extensions.bzl", "bundler_extension")
use_repo(bundler_extension, "bundler_toolchain")

register_toolchains("@bundler_toolchain//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "org_golang_x_net",
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
