load("@rules_go//go:def.bzl", "go_binary", "go_library")
load(":utils.bzl", "generate_artifacts_bzl", "go_binaries")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bin",
    embed = [":bundler_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "bundler_lib",
    srcs = ["main.go"],
    importpath = "github.com/bzlparty/rules_html/bundler",
    visibility = ["//visibility:private"],
    deps = ["@org_golang_x_net//html"],
)

go_binaries(
    name = "bins",
    embed = [":bundler_lib"],
    prefix = "bundler",
)

generate_artifacts_bzl(
    name = "artifacts_bzl",
    data = [
        ":bins",
        ":bins_sha384",
    ],
)

filegroup(
    name = "release",
    srcs = [
        ":artifacts_bzl",
        ":bins",
        ":bins_sha384",
    ],
)
