load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bzlparty_rules_html//:defs.bzl", "html_file")
load("@bzlparty_rules_html//html:html_bundle.bzl", "html_bundle")

html_file(
    name = "page_1",
    out = "page_1.html",
    body = [
        "<p>Hello, World!</p>",
    ],
    title = "Hello, World!",
)

write_file(
    name = "hello_world_js",
    out = "hello_world.js",
    content = [
        "console.log('Hello, World!');",
    ],
)

html_file(
    name = "page_2",
    out = "page_2.html",
    body = [
        """<script type="text/javascript" src="$(rootpath :hello_world_js)"></script>""",
    ],
    data = [
        ":hello_world_js",
    ],
    title = "Hello, World!",
)

html_file(
    name = "page_3",
    out = "page_3.html",
    copy_files_to_bin = True,
    data = [
        ":style.css",
    ],
    head = [
        """<link rel="stylesheet" type="text/css" href="$(rootpath :style.css)" />""",
    ],
    title = "Hello, World!",
)

html_bundle(
    name = "page_4",
    out = "page_4.html",
    data = [":style.css"],
    entry_point = ":page_3.html",
)

html_file(
    name = "page_5",
    out = "page_5.html",
    body = [
        """<script type="text/javascript" src="$(location :hello_world_js)"></script>""",
    ],
    data = [
        ":hello_world_js",
    ],
    title = "Hello, World!",
)

html_bundle(
    name = "page_6",
    out = "page_6.html",
    entry_point = ":page_5",
)

build_test(
    name = "files",
    targets = [
        ":hello_world_js",
        ":page_1",
        ":page_2",
        ":page_3",
        ":page_4",
        ":page_5",
        ":page_6",
    ],
)
