load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bzlparty_rules_html//:defs.bzl", "html_bundle", "html_file")

html_file(
    name = "page",
    out = "page.html",
    body = [
        "<p>Hello, World!</p>",
    ],
    title = "Hello, World!",
)

write_file(
    name = "hello_world_js",
    out = "hello_world.js",
    content = [
        "console.log('Hello, World!');",
    ],
)

html_file(
    name = "page_with_script",
    out = "page_with_script.html",
    body = [
        """<script type="text/javascript" src="$(location :hello_world_js)"></script>""",
    ],
    data = [
        ":hello_world_js",
    ],
    title = "Hello, World!",
)

html_bundle(
    name = "bundle",
    out = "bundle.html",
    entry_point = ":page_with_script.html",
)

build_test(
    name = "files",
    targets = [
        ":hello_world_js",
        ":page",
        ":page_with_script",
        ":bundle",
    ],
)
