load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "html_file",
    srcs = ["html_file.bzl"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_bazel_lib//lib:expand_make_vars",
        "@aspect_bazel_lib//lib:lists",
    ],
)

exports_files(
    ["html.tpl"],
    visibility = ["//visibility:public"],
)
